set client with server

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
   "description": "basics tutorial of mern stack using node,express,react and mongodb",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "client-install": "npm install --prefix ../client",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently \"npm run server\" \"npm run client \""
   },
   "repository": {
     "type": "git",
@@ -18,9 +22,13 @@
   "homepage": "https://github.com/rajgirkumar/mern-tute#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.10"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
